convertframe: Fix leak in case of vcrop is disabled

https://bugzilla.gnome.org/show_bug.cgi?id=784639